--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
     "lint": "eslint src/**",
     "clean": "shx rm -rf ./dist && shx rm -rf ./docs",
     "build": "npm run clean && npm-run-all --parallel build:typescript && npm run build:webpack",
-    "build:typescript": "tsc --module es2015",
+    "build:typescript": "tsc",
     "build:typedoc": "typedoc --exclude **/_internal/**/* --excludePrivate --hideGenerator --out docs src",
     "build:webpack": "webpack",
     "publish:development": "standard-version --prerelease alpha -m 'chore(alpha): %s' --author='ci <ci@openhps.org>' && npm publish --tag dev",
     "publish:beta": "standard-version --prerelease beta -m 'chore(beta): %s' --author='ci <ci@openhps.org>' && npm publish --tag beta",
     "publish:release": "standard-version -m 'chore(release): %s' --author='ci <ci@openhps.org>' && npm publish --tag latest",
-    "postinstall": "npm-run-all --parallel postinstall-*",
+    "postinstall": "git submodule update --init --recursive && npm-run-all --parallel postinstall-*",
     "postinstall-server": "cd ./lib/server/lib && npm install && tsc",
     "postinstall-web": "cd ./lib/web && npm install && tsc"
   },
