--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "publish:development": "standard-version --prerelease alpha -m 'chore(alpha): %s' --author='ci <ci@openhps.org>' && npm publish --tag dev",
     "publish:beta": "standard-version --prerelease beta -m 'chore(beta): %s' --author='ci <ci@openhps.org>' && npm publish --tag beta",
     "publish:release": "standard-version -m 'chore(release): %s' --author='ci <ci@openhps.org>' && npm publish --tag latest",
-    "postinstall": "git submodule update --init --recursive && npm-run-all --parallel postinstall-*",
-    "postinstall-server": "cd ./lib/server/lib && npm install && tsc",
-    "postinstall-web": "cd ./lib/web && npm install && tsc"
+    "preinstall": "git submodule update --init --recursive && npm-run-all --parallel preinstall-*",
+    "preinstall-server": "cd ./lib/server/lib && npm install && tsc",
+    "preinstall-web": "cd ./lib/web && npm install && tsc"
   },
   "keywords": [
     "openhps",
@@ -40,7 +40,7 @@
     "@openhps/core": "0.1.0-alpha.77",
     "dotenv": "^8.2.0",
     "reflect-metadata": ">=0.1.13",
-    "spherov2.js-server": "file:lib/server/lib",
+    "spherov2.js-server": "file://./lib/server/lib",
     "spherov2.js-web": "file://./lib/web"
   },
   "devDependencies": {
