--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "publish:development": "standard-version --prerelease alpha -m 'chore(alpha): %s' --author='ci <ci@openhps.org>' && npm publish --tag dev",
     "publish:beta": "standard-version --prerelease beta -m 'chore(beta): %s' --author='ci <ci@openhps.org>' && npm publish --tag beta",
     "publish:release": "standard-version -m 'chore(release): %s' --author='ci <ci@openhps.org>' && npm publish --tag latest",
-    "preinstall": "git submodule update --init --recursive && npm-run-all --parallel preinstall-*",
+    "preinstall": "git submodule update --init --recursive && npm run preinstall-server && npm run preinstall-web",
     "preinstall-server": "cd ./lib/server/lib && npm install && tsc",
     "preinstall-web": "cd ./lib/web && npm install && tsc"
   },
