--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   "types": "dist/index.d.ts",
   "unpkg": "dist/openhps-sphero.min.js",
   "jsdelivr": "dist/openhps-sphero.min.js",
+  "files": [
+    "lib/**/*",
+    "dist/**/*"
+  ],
   "scripts": {
     "test": "mocha --experimental-worker",
     "test:jenkins": "jenkins-mocha --cobertura",
@@ -37,31 +41,24 @@
     "sphero"
   ],
   "dependencies": {
-    "@openhps/core": "0.1.0-alpha.77",
+    "@openhps/core": ">=0.1.0-alpha.81",
     "reflect-metadata": ">=0.1.13",
     "spherov2.js-server": "file://./lib/server/lib",
     "spherov2.js-web": "file://./lib/web"
   },
   "devDependencies": {
-    "@babel/cli": "^7.11.5",
-    "@babel/core": "^7.11.5",
-    "@babel/node": "^7.10.5",
-    "@babel/plugin-transform-runtime": "^7.11.5",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/register": "^7.11.5",
-    "@babel/runtime": "^7.11.2",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@types/chai": "^4.2.12",
     "@types/mocha": "^5.2.7",
-    "@types/node": "^12.12.55",
+    "@types/node": "^12.12.56",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
     "chai": "^4.2.0",
     "eslint": "^7.8.1",
     "eslint-config-prettier": ">=6.11.0",
     "eslint-plugin-import": ">=2.22.0",
-    "eslint-plugin-jsdoc": "^30.3.1",
+    "eslint-plugin-jsdoc": "^30.4.0",
     "eslint-plugin-prettier": ">=3.1.4",
     "husky": "^4.2.5",
     "jenkins-mocha": "^8.0.0",
