chore: fixed library linking issue

--- a/lib/web/package.json
+++ b/lib/web/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "tsc": "tsc"
   },
+  "files": [
+    "dist/**/*"
+  ],
   "author": "igbopie",
   "license": "ISC",
   "devDependencies": {
