--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@openhps/sphero",
-  "version": "0.1.0-alpha.5",
+  "version": "0.1.0-alpha.9",
   "description": "Open Hybrid Positioning System - Sphero component",
   "author": "Maxim Van de Wynckel",
   "license": "Apache-2.0",
@@ -16,7 +16,8 @@
   "unpkg": "dist/openhps-sphero.min.js",
   "jsdelivr": "dist/openhps-sphero.min.js",
   "files": [
-    "lib/**/*",
+    "lib/web/dist/**/*",
+    "lib/server/lib/dist/**/*",
     "dist/**/*"
   ],
   "scripts": {
@@ -25,7 +26,7 @@
     "cover": "nyc mocha && nyc report --reporter=cobertura",
     "lint": "eslint src/**",
     "clean": "shx rm -rf ./dist && shx rm -rf ./docs",
-    "build": "npm run clean && npm-run-all --parallel build:typescript build:lib && npm run build:webpack",
+    "build": "npm run clean && npm run build:lib && npm run build:typescript && npm run build:webpack",
     "build:typescript": "tsc",
     "build:lib": "npm-run-all --parallel build:lib:*",
     "build:lib:web": "cd ./lib/web && npm install && tsc",
@@ -41,10 +42,15 @@
     "sphero"
   ],
   "dependencies": {
+    "@abandonware/noble": "^1.9.2-10",
     "@openhps/core": ">=0.1.0-alpha.81",
-    "reflect-metadata": ">=0.1.13",
-    "spherov2.js-server": "file://./lib/server/lib",
-    "spherov2.js-web": "file://./lib/web"
+    "debug": "^4.1.1",
+    "module-alias": "^2.2.2",
+    "reflect-metadata": ">=0.1.13"
+  },
+  "_moduleAliases": {
+    "spherov2.js-server": "lib/server/lib/dist",
+    "spherov2.js-web": "lib/web/dist"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
@@ -52,6 +58,7 @@
     "@types/chai": "^4.2.12",
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.12.56",
+    "@types/web-bluetooth": "0.0.9",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
     "chai": "^4.2.0",
