chore: fixed submodule installation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,12 +12,7 @@
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "allowJs": true,
-        "skipLibCheck": true,
-        "baseUrl": ".",
-        "paths": {
-            "spherov2.js-server": ["lib/server/lib/dist"],
-            "spherov2.js-web": ["lib/web/dist"]
-        }
+        "skipLibCheck": true
     },
     "include": [
         "src/**/*",
