--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "sphero"
   ],
   "dependencies": {
-    "@openhps/core": ">=0.1.0-alpha.81",
+    "@openhps/core": "0.1.0-alpha.85",
     "reflect-metadata": ">=0.1.13",
     "spherov2.js-server": "file://./lib/server/lib",
     "spherov2.js-web": "file://./lib/web"
@@ -49,29 +49,29 @@
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
-    "@types/chai": "^4.2.12",
+    "@types/chai": "^4.2.14",
     "@types/mocha": "^5.2.7",
-    "@types/node": "^12.12.56",
+    "@types/node": "^12.19.7",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
     "chai": "^4.2.0",
-    "eslint": "^7.8.1",
-    "eslint-config-prettier": ">=6.11.0",
-    "eslint-plugin-import": ">=2.22.0",
-    "eslint-plugin-jsdoc": "^30.4.0",
+    "eslint": "^7.14.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsdoc": "^30.7.8",
     "eslint-plugin-prettier": ">=3.1.4",
     "husky": "^4.2.5",
     "jenkins-mocha": "^8.0.0",
     "mocha": "^6.2.3",
     "npm-run-all": "^4.1.5",
     "nyc": "^14.1.1",
-    "prettier": "^2.1.1",
-    "shx": "^0.3.2",
+    "prettier": "^2.2.0",
+    "shx": "^0.3.3",
     "standard-version": "^7.1.0",
     "ts-node": "^8.10.2",
-    "typedoc": "^0.19.0",
-    "typescript": "^4.0.2",
-    "webpack": "^4.44.1",
+    "typedoc": "^0.19.2",
+    "typescript": "^4.1.2",
+    "webpack": "^4.44.2",
     "webpack-auto-inject-version": "^1.2.2",
     "webpack-cli": "^3.3.12"
   },
