--- a/package.json
+++ b/package.json
@@ -11,14 +11,23 @@
   "publishConfig": {
     "access": "public"
   },
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "unpkg": "dist/openhps-sphero.min.js",
-  "jsdelivr": "dist/openhps-sphero.min.js",
+  "main": "./dist/cjs/index.js",
+  "type": "commonjs",
+  "types": "./dist/cjs/index.d.ts",
+  "module": "./dist/esm/index.js",
+  "exports": {
+    "require": "./dist/cjs/index.js",
+    "import": "./dist/esm/index.js"
+  },
+  "unpkg": "dist/web/openhps-sphero.min.js",
+  "jsdelivr": "dist/web/openhps-sphero.min.js",
   "files": [
     "lib/web/dist/**/*",
+    "lib/web/src/**/*",
     "lib/server/lib/dist/**/*",
-    "dist/**/*"
+    "lib/server/lib/src/**/*",
+    "dist/**/*",
+    "src/**/*"
   ],
   "scripts": {
     "test": "mocha --experimental-worker",
@@ -26,8 +35,9 @@
     "cover": "nyc mocha && nyc report --reporter=cobertura",
     "lint": "eslint src/**",
     "clean": "shx rm -rf ./dist && shx rm -rf ./docs",
-    "build": "npm run clean && npm run build:lib && npm run build:typescript && npm run build:webpack",
-    "build:typescript": "tsc",
+    "build": "npm run clean && npm run build:lib && npm-run-all --parallel build:esm build:cjs && npm run build:webpack",
+    "build:esm": "tsc --module es2015 --outDir dist/esm",
+    "build:cjs": "tsc --module commonjs  --outDir dist/cjs",
     "build:lib": "npm-run-all --parallel build:lib:*",
     "build:lib:web": "cd ./lib/web && npm install && tsc",
     "build:lib:server": "cd ./lib/server/lib && npm install && tsc",
@@ -42,7 +52,7 @@
     "sphero"
   ],
   "dependencies": {
-    "@openhps/core": ">=0.1.0-alpha.87",
+    "@openhps/core": ">=0.2.0-alpha.3",
     "reflect-metadata": ">=0.1.13"
   },
   "devDependencies": {
@@ -50,27 +60,27 @@
     "@commitlint/config-conventional": "^8.3.4",
     "@types/chai": "^4.2.14",
     "@types/mocha": "^5.2.7",
-    "@types/node": "^12.12.56",
-    "@types/web-bluetooth": "0.0.9",
-    "@typescript-eslint/eslint-plugin": "^3.10.1",
-    "@typescript-eslint/parser": "^3.10.1",
+    "@types/node": "^12.19.9",
+    "@types/web-bluetooth": ">=0.0.9",
+    "@typescript-eslint/eslint-plugin": "^4.10.0",
+    "@typescript-eslint/parser": "^4.10.0",
     "chai": "^4.2.0",
-    "eslint": "^7.14.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsdoc": "^30.7.8",
-    "eslint-plugin-prettier": ">=3.1.4",
-    "husky": "^4.2.5",
+    "eslint": ">=7.15.0",
+    "eslint-config-prettier": "^7.0.0",
+    "eslint-plugin-import": ">=2.22.1",
+    "eslint-plugin-jsdoc": ">=30.7.8",
+    "eslint-plugin-prettier": ">=3.3.0",
+    "husky": "^4.3.6",
     "jenkins-mocha": "^8.0.0",
     "mocha": "^6.2.3",
     "npm-run-all": "^4.1.5",
     "nyc": "^14.1.1",
-    "prettier": "^2.2.0",
+    "prettier": "^2.2.1",
     "shx": "^0.3.3",
     "standard-version": "^7.1.0",
     "ts-node": "^8.10.2",
     "typedoc": "^0.19.2",
-    "typescript": "^4.0.2",
+    "typescript": "^4.1.3",
     "webpack": "^4.44.2",
     "webpack-auto-inject-version": "^1.2.2",
     "webpack-cli": "^3.3.12"
