--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "reflect-metadata": ">=0.1.13"
   },
   "devDependencies": {
+    "@openhps/core": ">=0.2.0-alpha.3",
+    "reflect-metadata": ">=0.1.13",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@types/chai": "^4.2.14",
