--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "access": "public"
   },
   "main": "./dist/index.js",
-  "type": "commonjs",
   "types": "./dist/index.d.ts",
   "exports": {
     "require": "./dist/index.js"
@@ -28,14 +27,13 @@
     "src/**/*"
   ],
   "scripts": {
-    "test": "mocha --experimental-worker",
-    "test:jenkins": "jenkins-mocha --cobertura",
-    "cover": "nyc mocha && nyc report --reporter=cobertura",
+    "test": "mocha --config test/.mocharc.json",
+    "cover": "nyc mocha --config test/.mocharc.json && nyc report --reporter=cobertura",
     "lint": "eslint src/**",
     "clean": "shx rm -rf ./dist && shx rm -rf ./docs/out",
-    "build": "npm run clean && npm run build:lib && npm-run-all --parallel build:cjs && npm run build:webpack",
+    "build": "npm run clean && npm run build:lib && npm-run-all --parallel build:cjs build:esm && npm run build:webpack",
     "build:esm": "tsc --module es2015 --outDir dist/esm",
-    "build:cjs": "tsc --module commonjs  --outDir dist",
+    "build:cjs": "tsc --module commonjs  --outDir dist/cjs",
     "build:lib": "npm-run-all --parallel build:lib:*",
     "build:lib:web": "cd ./lib/web && npm install && tsc",
     "build:lib:server": "cd ./lib/server/lib && npm install && tsc",
@@ -43,48 +41,54 @@
     "build:webpack": "npm-run-all --parallel build:webpack:*",
     "build:webpack:dev": "webpack --env dev",
     "build:webpack:prod": "webpack --env prod",
-    "publish:development": "standard-version --prerelease alpha -m 'chore(alpha): %s' --author='ci <ci@openhps.org>' && npm publish --tag dev",
-    "publish:beta": "standard-version --prerelease beta -m 'chore(beta): %s' --author='ci <ci@openhps.org>' && npm publish --tag beta",
-    "publish:release": "standard-version -m 'chore(release): %s' --author='ci <ci@openhps.org>' && npm publish --tag latest"
+    "publish:development": "npm run bump:beta && npm publish --tag dev",
+    "publish:beta": "npm run bump:beta && npm publish --tag beta",
+    "publish:release": "npm run bump:beta && npm publish --tag latest",
+    "bump:development": "standard-version --prerelease alpha -m 'chore(alpha): %s' --skip.changelog",
+    "bump:beta": "standard-version --prerelease beta -m 'chore(beta): %s' --skip.changelog",
+    "bump:release": "standard-version -m 'chore(release): %s' --skip.changelog"
   },
   "keywords": [
     "openhps",
     "sphero"
   ],
   "peerDependencies": {
-    "@openhps/core": ">=0.2.0-alpha.3",
-    "reflect-metadata": ">=0.1.13"
+    "@openhps/core": ">=0.3.2-alpha.0",
+    "reflect-metadata": ">=0.1.13",
+    "@openhps/imu": ">=0.1.0"
   },
   "devDependencies": {
-    "@openhps/core": ">=0.2.0-alpha.3",
-    "reflect-metadata": ">=0.1.13",
-    "@commitlint/cli": "^11.0.0",
-    "@commitlint/config-conventional": "^11.0.0",
-    "@types/chai": "^4.2.14",
-    "@types/mocha": "^5.2.7",
-    "@types/node": "^12.19.9",
-    "@types/web-bluetooth": ">=0.0.9",
-    "@typescript-eslint/eslint-plugin": "^4.10.0",
-    "@typescript-eslint/parser": "^4.10.0",
-    "chai": "^4.2.0",
-    "eslint": ">=7.15.0",
-    "eslint-config-prettier": "^7.0.0",
-    "eslint-plugin-import": ">=2.22.1",
-    "eslint-plugin-jsdoc": ">=30.7.8",
-    "eslint-plugin-prettier": ">=3.3.0",
-    "husky": "^4.3.6",
+    "@commitlint/cli": "^13.2.1",
+    "@commitlint/config-conventional": "^13.2.0",
+    "@openhps/core": ">=0.3.2-alpha.0",
+    "@openhps/imu": "0.1.0",
+    "@types/chai": "^4.2.22",
+    "@types/mocha": "^9.0.0",
+    "@types/node": "^16.11.1",
+    "@types/web-bluetooth": ">=0.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.1.0",
+    "@typescript-eslint/parser": "^5.1.0",
+    "chai": "^4.3.4",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-deprecation": "^1.2.1",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jsdoc": "^36.1.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^7.0.2",
     "jenkins-mocha": "^8.0.0",
-    "mocha": "^6.2.3",
+    "mocha": "^9.1.3",
     "npm-run-all": "^4.1.5",
-    "nyc": "^14.1.1",
-    "prettier": "^2.2.1",
+    "nyc": "^15.1.0",
+    "prettier": "^2.4.1",
+    "reflect-metadata": ">=0.1.13",
     "shx": "^0.3.3",
-    "standard-version": "^7.1.0",
-    "ts-node": "^8.10.2",
-    "typedoc": "^0.20.5",
-    "typescript": "^4.1.3",
-    "webpack": "^5.11.1",
-    "webpack-cli": "^4.3.0"
+    "standard-version": "^9.3.2",
+    "ts-node": "^10.3.0",
+    "typedoc": "^0.22.6",
+    "typescript": "^4.4.4",
+    "webpack": "^5.59.0",
+    "webpack-cli": "^4.9.1"
   },
   "nyc": {
     "branches": 50,
