ci: load submodules

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,13 +12,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          submodules: recursive
       - name: Build Web Library
         working-directory: ./lib/web
         run: |
           npm install -g typescript
           npm install
           tsc
-      - name: Build Web Library
+      - name: Build Server Library
         working-directory: ./lib/server/lib
         run: |
           npm install
