--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,12 +8,26 @@ on:
   workflow_dispatch:
 
 jobs:
-  build_and_test:
+  build:
+    name: Build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           submodules: recursive
+      - name: Load dependency cache
+        uses: actions/cache@v2
+        with:
+          path: |
+            **/node_modules
+          key: ${{ runner.os }}-dependencies-v1-${{ hashFiles('**/package-lock.json') }}
+      - name: Load build cache
+        uses: actions/cache@v2
+        with:
+          path: |
+            **/dist
+            **/lib
+          key: ${{ runner.os }}-build-v1-${{ hashFiles('**/package-lock.json') }}-${{ github.run_number }}
       - name: Build Web Library
         working-directory: ./lib/web
         run: |
@@ -25,48 +39,180 @@ jobs:
         run: |
           npm install
           tsc
-      - name: Build
+      - name: Installing dependencies
         run: |
           npm install
-          npm run build
-      - name: Quality
+      - name: Build
         run: |
-          npm run lint
-      - name: Publish Web Artifacts
+          npm run build
+      - name: Upload web artifacts
         uses: actions/upload-artifact@v2
         with:
           name: web
           path: |
             dist/web/*
             !dist/web/*.txt
+
+  quality:
+    name: Code quality
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          submodules: recursive
+      - name: Load dependency cache
+        uses: actions/cache@v2
+        with:
+          path: |
+            **/node_modules
+          key: ${{ runner.os }}-dependencies-v1-${{ hashFiles('**/package-lock.json') }}
+      - name: Load build cache
+        uses: actions/cache@v2
+        with:
+          path: |
+            **/dist
+            **/lib
+          key: ${{ runner.os }}-build-v1-${{ hashFiles('**/package-lock.json') }}-${{ github.run_number }}
+      - name: Quality
+        run: |
+          npm run lint
+
+  documentation:
+    name: Build documentation
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          submodules: recursive
+      - name: Load dependency cache
+        uses: actions/cache@v2
+        with:
+          path: |
+            **/node_modules
+          key: ${{ runner.os }}-dependencies-v1-${{ hashFiles('**/package-lock.json') }}
+      - name: Load build cache
+        uses: actions/cache@v2
+        with:
+          path: |
+            **/dist
+            **/lib
+          key: ${{ runner.os }}-build-v1-${{ hashFiles('**/package-lock.json') }}-${{ github.run_number }}
+      - name: Load document cache
+        uses: actions/cache@v2
+        with:
+          path: |
+            **/docs/out
+          key: ${{ runner.os }}-docs-v1-${{ hashFiles('**/package-lock.json') }}-${{ github.run_number }}
+      - name: Build documentation
+        run: |
+          npm run build:typedoc
+
+  publish_documentation:
+    name: Publish documentation
+    needs:
+      - documentation
+      - quality
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Load document cache
+        uses: actions/cache@v2
+        with:
+          path: |
+            **/docs/out
+          key: ${{ runner.os }}-docs-v1-${{ hashFiles('**/package-lock.json') }}-${{ github.run_number }}
       - name: Publish Documentation
         uses: actions/upload-artifact@v2
         with:
           name: docs
           path: |
             docs/out/*
-      - name: Upload code coverage
-        uses: codecov/codecov-action@v2
+      - name: Deploy site to GitHub
+        if: github.ref == 'refs/heads/master' && success()
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          files: coverage/cobertura-coverage.xml
-          verbose: true
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./docs/out
+    
+  release_dev:
+    name: Release DEV
+    needs:
+      - build
+      - quality
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/dev'
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          submodules: recursive
+      - name: Load dependency cache
+        uses: actions/cache@v2
+        with:
+          path: |
+            **/node_modules
+          key: ${{ runner.os }}-dependencies-v1-${{ hashFiles('**/package-lock.json') }}
+      - name: Load build cache
+        uses: actions/cache@v2
+        with:
+          path: |
+            **/dist
+            **/lib
+          key: ${{ runner.os }}-build-v1-${{ hashFiles('**/package-lock.json') }}-${{ github.run_number }}
       - name: Configure Publish
         run: |
           git config --global user.name 'CI'
           git config --global user.email 'ci@openhps.org'
       - name: Bump version development
-        if: github.ref == 'refs/heads/dev'
         run: |
           npm run bump:development
-      - name: Bump version release
-        if: github.ref == 'refs/heads/master'
-        run: |
-          npm run bump:release
-      - name: Publish to NPM
+      - name: Publish to NPM (dev)
         uses: JS-DevTools/npm-publish@v1
-        if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/dev'
         with:
           token: ${{ secrets.NPM_TOKEN }}
+          tag: dev
+      - name: Publish to GitHub
+        if: success()
+        run: |
+          git push
+  
+  release_master:
+    name: Release MASTER
+    needs:
+      - build
+      - quality
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/master'
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          submodules: recursive
+      - name: Load dependency cache
+        uses: actions/cache@v2
+        with:
+          path: |
+            **/node_modules
+          key: ${{ runner.os }}-dependencies-v1-${{ hashFiles('**/package-lock.json') }}
+      - name: Load build cache
+        uses: actions/cache@v2
+        with:
+          path: |
+            **/dist
+            **/lib
+          key: ${{ runner.os }}-build-v1-${{ hashFiles('**/package-lock.json') }}-${{ github.run_number }}
+      - name: Configure Publish
+        run: |
+          git config --global user.name 'CI'
+          git config --global user.email 'ci@openhps.org'
+      - name: Bump version release
+        run: |
+          npm run bump:release
+      - name: Publish to NPM (master)
+        uses: JS-DevTools/npm-publish@v1
+        with:
+          token: ${{ secrets.NPM_TOKEN }}
+          tag: latest
       - name: Publish to GitHub
         if: success()
         run: |
