--- a/package.json
+++ b/package.json
@@ -8,39 +8,50 @@
     "type": "git",
     "url": "https://github.com/OpenHPS/openhps-sphero.git"
   },
+  "bugs": {
+    "url": "https://github.com/OpenHPS/openhps-sphero/issues"
+  },
+  "homepage": "https://openhps.org",
   "publishConfig": {
     "access": "public"
   },
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "exports": {
-    "require": "./dist/index.js"
-  },
-  "unpkg": "dist/web/openhps-sphero.min.js",
-  "jsdelivr": "dist/web/openhps-sphero.min.js",
+  "sideEffects": false,
+  "main": "./dist/cjs/index.js",
+  "types": "./dist/types/index.d.ts",
+  "unpkg": "./dist/web/openhps-sphero.min.js",
+  "jsdelivr": "./dist/web/openhps-sphero.min.js",
+  "lsd:module": true,
+  "module": "./dist/esm5/index.js",
+  "es2015": "./dist/esm/index.js",
   "files": [
     "lib/web/dist/**/*",
     "lib/web/src/**/*",
     "lib/server/lib/dist/**/*",
     "lib/server/lib/src/**/*",
     "dist/**/*",
-    "src/**/*"
+    "src/**/*",
+    "LICENSE"
   ],
   "scripts": {
     "test": "mocha --config test/.mocharc.json",
     "cover": "nyc mocha --config test/.mocharc.json && nyc report --reporter=cobertura",
+    "cover:ci": "nyc mocha --config test/.mocharc.json --reporter mocha-junit-reporter && nyc report --reporter=cobertura",
     "lint": "eslint src/**",
     "clean": "shx rm -rf ./dist && shx rm -rf ./docs/out",
-    "build": "npm run clean && npm run build:lib && npm-run-all --parallel build:cjs build:esm build:typedoc && npm run build:webpack",
-    "build:esm": "tsc --module es2015 --outDir dist/esm",
-    "build:cjs": "tsc --module commonjs  --outDir dist/cjs",
+    "build": "npm run clean && npm run build:lib && npm-run-all --parallel build:ts:* && npm run build:webpack",
+    "build:components": "componentsjs-generator",
+    "build:quick": "npm-run-all --parallel build:ts:* && npm run build:webpack",
+    "build:typedoc": "typedoc --options docs/typedoc.json",
+    "build:ts:cjs": "tsc --build ./tsconfig/tsconfig.bundle.cjs.json",
+    "build:ts:esm": "tsc --build ./tsconfig/tsconfig.bundle.esm.json",
+    "build:ts:esm5": "tsc --build ./tsconfig/tsconfig.bundle.esm5.json",
+    "build:ts:types": "tsc --build ./tsconfig/tsconfig.bundle.types.json",
+    "build:webpack": "npm-run-all --parallel build:webpack:*",
+    "build:webpack:prod": "webpack --env prod --",
+    "build:webpack:dev": "webpack --env dev --",
     "build:lib": "npm-run-all --parallel build:lib:*",
     "build:lib:web": "cd ./lib/web && npm install && tsc",
     "build:lib:server": "cd ./lib/server/lib && npm install && tsc",
-    "build:typedoc": "typedoc --options docs/typedoc.json",
-    "build:webpack": "npm-run-all --parallel build:webpack:*",
-    "build:webpack:dev": "webpack --env dev",
-    "build:webpack:prod": "webpack --env prod",
     "publish:development": "npm run bump:beta && npm publish --tag dev",
     "publish:beta": "npm run bump:beta && npm publish --tag beta",
     "publish:release": "npm run bump:beta && npm publish --tag latest",
@@ -53,42 +64,42 @@
     "sphero"
   ],
   "peerDependencies": {
-    "@openhps/core": ">=0.3.13",
+    "@openhps/core": ">=0.3.35",
     "reflect-metadata": ">=0.1.13",
     "@openhps/imu": ">=0.1.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^13.2.1",
-    "@commitlint/config-conventional": "^13.2.0",
-    "@openhps/core": ">=0.3.13",
-    "@openhps/imu": "0.1.0",
-    "@types/chai": "^4.2.22",
-    "@types/mocha": "^9.0.0",
-    "@types/node": "^16.11.1",
-    "@types/web-bluetooth": ">=0.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.1.0",
-    "@typescript-eslint/parser": "^5.1.0",
-    "chai": "^4.3.4",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-deprecation": "^1.2.1",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-jsdoc": "^36.1.1",
+    "@commitlint/cli": "^16.2.4",
+    "@commitlint/config-conventional": "^16.2.4",
+    "@openhps/core": ">=0.3.35",
+    "@openhps/imu": "0.1.3",
+    "@types/chai": "^4.3.1",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^17.0.32",
+    "@types/web-bluetooth": ">=0.0.14",
+    "@typescript-eslint/eslint-plugin": "^5.23.0",
+    "@typescript-eslint/parser": "^5.23.0",
+    "chai": "^4.3.6",
+    "eslint": "^8.15.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-deprecation": "^1.3.2",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsdoc": "^39.2.9",
     "eslint-plugin-prettier": "^4.0.0",
-    "husky": "^7.0.2",
-    "jenkins-mocha": "^8.0.0",
-    "mocha": "^9.1.3",
+    "husky": "^8.0.1",
+    "jenkins-mocha": "^9.0.0",
+    "mocha": "^10.0.0",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
-    "prettier": "^2.4.1",
+    "prettier": "^2.6.2",
     "reflect-metadata": ">=0.1.13",
-    "shx": "^0.3.3",
+    "shx": "^0.3.4",
     "standard-version": "^9.3.2",
-    "ts-node": "^10.3.0",
-    "typedoc": "^0.22.6",
-    "typescript": "^4.4.4",
-    "webpack": "^5.59.0",
-    "webpack-cli": "^4.9.1"
+    "ts-node": "^10.7.0",
+    "typedoc": "^0.22.15",
+    "typescript": "^4.6.4",
+    "webpack": "^5.72.1",
+    "webpack-cli": "^4.9.2"
   },
   "nyc": {
     "branches": 50,
@@ -99,9 +110,7 @@
       "src"
     ],
     "exclude": [
-      "test",
-      "src/**/_internal/Worker*.ts",
-      "src/**/WorkerService.ts"
+      "test"
     ],
     "extension": [
       ".ts"
