--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,25 @@
+/*
+  This is a "Solution Style" tsconfig.json file, and is used by editors and TypeScript’s language
+  server to improve development experience. It is not intended to be used to perform a compilation.
+  To learn more about this file see:
+  https://devblogs.microsoft.com/typescript/announcing-typescript-3-9/#solution-style-tsconfig.
+*/
 {
-    "compilerOptions": {
-        "target": "es6",
-        "module": "commonjs",
-        "moduleResolution": "node",
-        "noImplicitAny": true,
-        "removeComments": true,
-        "preserveConstEnums": true,
-        "sourceMap": true,
-        "outDir": "./dist",
-        "declaration": true,
-        "emitDecoratorMetadata": true,
-        "experimentalDecorators": true,
-        "allowJs": true,
-        "skipLibCheck": true,
-    },
-    "include": [
-        "src/**/*",
+    "files": [],
+    "references": [
+      {
+        "path": "./tsconfig/tsconfig.app.json"
+      },
+      {
+        "path": "./tsconfig/tsconfig.spec.json"
+      }
     ],
-    "exclude": [
-        "node_modules"
-    ]
+    /* Required for workers */
+    "compilerOptions": {
+      "target": "es6",
+      "module": "commonjs",
+      "moduleResolution": "node",
+      "emitDecoratorMetadata": true,
+      "experimentalDecorators": true,
+    }
 }
