--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,9 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: recursive
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 14
       - name: Load dependency cache
         uses: actions/cache@v2
         with:
@@ -33,17 +36,17 @@ jobs:
           key: ${{ runner.os }}-build-v1-${{ hashFiles('**/package-lock.json') }}-${{ github.run_number }}
       - name: Installing dependencies
         run: |
-          npm install --no-save
+          npm install
       - name: Build Web Library
         working-directory: ./lib/web
         run: |
           npm install -g typescript
-          npm install --no-save
+          npm install
           tsc
       - name: Build Server Library
         working-directory: ./lib/server/lib
         run: |
-          npm install --no-save
+          npm install
           tsc
       - name: Build
         run: |
