ci: fix hashing of package.json

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
             **/node_modules
             **/lib/server/lib/node_modules
             **/lib/web/node_modules
-          key: ${{ runner.os }}-dependencies-v1-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-dependencies-v1-${{ hashFiles('package.json') }}
       - name: Load build cache
         uses: actions/cache@v2
         with:
@@ -33,7 +33,7 @@ jobs:
             **/dist
             **/lib/server/lib/dist
             **/lib/web/dist
-          key: ${{ runner.os }}-build-v1-${{ hashFiles('**/package-lock.json') }}-${{ github.run_number }}
+          key: ${{ runner.os }}-build-v1-${{ hashFiles('package.json') }}-${{ github.run_number }}
       - name: Installing dependencies
         run: |
           npm install
@@ -74,7 +74,7 @@ jobs:
             **/node_modules
             **/lib/server/lib/node_modules
             **/lib/web/node_modules
-          key: ${{ runner.os }}-dependencies-v1-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-dependencies-v1-${{ hashFiles('package.json') }}
       - name: Load build cache
         uses: actions/cache@v2
         with:
@@ -82,7 +82,7 @@ jobs:
             **/dist
             **/lib/server/lib/dist
             **/lib/web/dist
-          key: ${{ runner.os }}-build-v1-${{ hashFiles('**/package-lock.json') }}-${{ github.run_number }}
+          key: ${{ runner.os }}-build-v1-${{ hashFiles('package.json') }}-${{ github.run_number }}
       - name: Quality
         run: |
           npm run lint
@@ -102,7 +102,7 @@ jobs:
             **/node_modules
             **/lib/server/lib/node_modules
             **/lib/web/node_modules
-          key: ${{ runner.os }}-dependencies-v1-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-dependencies-v1-${{ hashFiles('package.json') }}
       - name: Load build cache
         uses: actions/cache@v2
         with:
@@ -110,13 +110,13 @@ jobs:
             **/dist
             **/lib/server/lib/dist
             **/lib/web/dist
-          key: ${{ runner.os }}-build-v1-${{ hashFiles('**/package-lock.json') }}-${{ github.run_number }}
+          key: ${{ runner.os }}-build-v1-${{ hashFiles('package.json') }}-${{ github.run_number }}
       - name: Load document cache
         uses: actions/cache@v2
         with:
           path: |
             **/docs/out
-          key: ${{ runner.os }}-docs-v1-${{ hashFiles('**/package-lock.json') }}-${{ github.run_number }}
+          key: ${{ runner.os }}-docs-v1-${{ hashFiles('package.json') }}-${{ github.run_number }}
       - name: Build documentation
         run: |
           npm run build:typedoc
@@ -134,7 +134,7 @@ jobs:
         with:
           path: |
             **/docs/out
-          key: ${{ runner.os }}-docs-v1-${{ hashFiles('**/package-lock.json') }}-${{ github.run_number }}
+          key: ${{ runner.os }}-docs-v1-${{ hashFiles('package.json') }}-${{ github.run_number }}
       - name: Publish Documentation
         uses: actions/upload-artifact@v2
         with:
@@ -166,7 +166,7 @@ jobs:
             **/node_modules
             **/lib/server/lib/node_modules
             **/lib/web/node_modules
-          key: ${{ runner.os }}-dependencies-v1-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-dependencies-v1-${{ hashFiles('package.json') }}
       - name: Load build cache
         uses: actions/cache@v2
         with:
@@ -174,7 +174,7 @@ jobs:
             **/dist
             **/lib/server/lib/dist
             **/lib/web/dist
-          key: ${{ runner.os }}-build-v1-${{ hashFiles('**/package-lock.json') }}-${{ github.run_number }}
+          key: ${{ runner.os }}-build-v1-${{ hashFiles('package.json') }}-${{ github.run_number }}
       - name: Configure Publish
         run: |
           git config --global user.name 'CI'
@@ -210,7 +210,7 @@ jobs:
             **/node_modules
             **/lib/server/lib/node_modules
             **/lib/web/node_modules
-          key: ${{ runner.os }}-dependencies-v1-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-dependencies-v1-${{ hashFiles('package.json') }}
       - name: Load build cache
         uses: actions/cache@v2
         with:
@@ -218,7 +218,7 @@ jobs:
             **/dist
             **/lib/server/lib/dist
             **/lib/web/dist
-          key: ${{ runner.os }}-build-v1-${{ hashFiles('**/package-lock.json') }}-${{ github.run_number }}
+          key: ${{ runner.os }}-build-v1-${{ hashFiles('package.json') }}-${{ github.run_number }}
       - name: Configure Publish
         run: |
           git config --global user.name 'CI'
