--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   "types": "./dist/types/index.d.ts",
   "unpkg": "./dist/web/openhps-sphero.min.js",
   "jsdelivr": "./dist/web/openhps-sphero.min.js",
-  "lsd:module": true,
   "module": "./dist/esm5/index.js",
   "es2015": "./dist/esm/index.js",
   "files": [
@@ -39,7 +38,6 @@
     "lint": "eslint src/**",
     "clean": "shx rm -rf ./dist && shx rm -rf ./docs/out",
     "build": "npm run clean && npm run build:lib && npm-run-all --parallel build:ts:* && npm run build:webpack",
-    "build:components": "componentsjs-generator",
     "build:quick": "npm-run-all --parallel build:ts:* && npm run build:webpack",
     "build:typedoc": "typedoc --options docs/typedoc.json",
     "build:ts:cjs": "tsc --build ./tsconfig/tsconfig.bundle.cjs.json",
@@ -64,42 +62,40 @@
     "sphero"
   ],
   "peerDependencies": {
-    "@openhps/core": ">=0.3.37",
-    "reflect-metadata": ">=0.1.13",
-    "@openhps/imu": ">=0.1.0"
+    "@openhps/core": ">=0.4.7",
+    "reflect-metadata": ">=0.1.13"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.0.3",
-    "@commitlint/config-conventional": "^17.0.3",
-    "@openhps/core": ">=0.3.37",
-    "@openhps/imu": "0.1.3",
-    "@types/chai": "^4.3.1",
-    "@types/mocha": "^9.1.1",
-    "@types/node": "^18.6.2",
-    "@types/web-bluetooth": ">=0.0.15",
-    "@typescript-eslint/eslint-plugin": "^5.31.0",
-    "@typescript-eslint/parser": "^5.31.0",
-    "chai": "^4.3.6",
-    "eslint": "^8.20.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-deprecation": "^1.3.2",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsdoc": "^39.3.3",
+    "@commitlint/cli": "^17.4.4",
+    "@commitlint/config-conventional": "^17.4.4",
+    "@openhps/core": ">=0.4.7",
+    "@types/chai": "^4.3.4",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^18.14.1",
+    "@types/web-bluetooth": ">=0.0.16",
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@typescript-eslint/parser": "^5.53.0",
+    "chai": "^4.3.7",
+    "eslint": "^8.34.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-deprecation": "^1.3.3",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsdoc": "^40.0.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "husky": "^8.0.1",
+    "husky": "^8.0.3",
     "jenkins-mocha": "^9.0.0",
-    "mocha": "^10.0.0",
+    "mocha": "^10.2.0",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
-    "prettier": "^2.7.1",
+    "prettier": "^2.8.4",
     "reflect-metadata": ">=0.1.13",
     "shx": "^0.3.4",
     "standard-version": "^9.5.0",
     "ts-node": "^10.9.1",
-    "typedoc": "^0.23.9",
-    "typescript": "^4.7.4",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "typedoc": "^0.23.25",
+    "typescript": "^4.9.5",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   },
   "nyc": {
     "branches": 50,
